k8s/auth-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-db
spec:
  selector:
    app: auth-db
  ports:
    - port: 1433
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      securityContext:        
        runAsUser: 10001
        runAsGroup: 0
        fsGroup: 10001
      containers:
        - name: auth-db
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: mssqldata
              mountPath: /var/opt/mssql
      volumes:
        - name: mssqldata
          persistentVolumeClaim:
            claimName: auth-db-pvc
