k8s/coreapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coreapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coreapi
  template:
    metadata:
      labels:
        app: coreapi
    spec:
      containers:
        - name: coreapi
          image: lui5da/ecommerce-coreapi:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: coreapi
spec:
  selector:
    app: coreapi
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
