k8s/ecommerce-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-db
spec:
  selector:
    app: ecommerce-db
  ports:
    - port: 1433
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-db
  template:
    metadata:
      labels:
        app: ecommerce-db
    spec:
      containers:
        - name: ecommerce-db
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: mssqldata
              mountPath: /var/opt/mssql
      volumes:
        - name: mssqldata
          persistentVolumeClaim:
            claimName: ecommerce-db-pvc
