k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ecommerce.proyectoredes.site
      secretName: ecommerce-tls
  rules:
    - host: ecommerce.proyectoredes.site
      http:
        paths:
          - path: /api/Auth
            pathType: Prefix
            backend:
              service:
                name: authservice
                port:
                  number: 8080

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: coreapi
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
